--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,80 @@
 /*
   Custom styles for Trackster App
 */
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: "Work Sans", sans-serif;
+  color: rgb(74, 74, 74);
+}
+
+.first {
+  background-color: rgb(35, 2, 63);
+  height: 8rem;
+  display: flex;
+  align-items: center;
+}
+
+.second {
+  background-color: rgb(104, 0, 255);
+  color: rgb(255, 255, 255);
+
+  height: 2rem;
+  display: flex;
+  align-items: center;
+
+  font-weight: 500;
+}
+
+h1 {
+  color: rgb(255, 0, 171);
+  font-family: Righteous;
+  font-size: 2.5rem;
+}
+
+#search {
+  background-color: rgb(255, 0, 171);
+  text-align: center;
+  padding: .4rem;
+}
+
+#search:hover {
+  background-color: rgb(255, 102, 204);
+  cursor: pointer;
+}
+
+input:focus {
+  outline: none;
+}
+
+input::placeholder {
+  color: rgb(191, 191, 191);
+}
+
+input, #search {
+  border-radius: 1.5rem;
+  height: 2.5rem;
+  margin-right: 1rem;
+}
+
+/* Mock */
+#play {
+  color: rgb(255, 0, 171);
+}
+
+#play:hover {
+  color: rgb(255, 102, 204);
+}
+
+.result {
+  height: 5.3rem;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgb(191, 191, 191);
+}
+
+.result:hover {
+  background-color: rgb(239, 237, 242);
+}
